...
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_fragment_time"
        app:layout_constraintStart_toStartOf="@+id/home_fragment_time" />

    <TextView
        android:id="@+id/home_fragment_tasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_64sdp"
        android:alpha="-1"
        android:gravity="start"
        android:padding="@dimen/_12sdp"
...
